objects/Account.object
<CustomObject><fields>
        <fullName>ACF_Active_Program__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active Program</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_Babson_Collaborative_Acceptance_Date__c</fullName>
        <label>Babson Collaborative Acceptance Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>ACF_Babson_Collaborative_Member__c</fullName>
        <label>Babson Collaborative Member?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospective</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>ACF_Babson_Collaborative_Renewal_Date__c</fullName>
        <formula>DATE( YEAR(  ACF_Babson_Collaborative_Acceptance_Date__c  ) + FLOOR( ( MONTH ( ACF_Babson_Collaborative_Acceptance_Date__c) + 12 - 1 ) / 12 ), MOD( MONTH( ACF_Babson_Collaborative_Acceptance_Date__c) + 12 - 1 + IF( DAY ( ACF_Babson_Collaborative_Acceptance_Date__c) &gt; CASE( MOD( MONTH( ACF_Babson_Collaborative_Acceptance_Date__c) + 12 - 1, 12 ) + 1, 2, 28, 4, 30, 6, 30, 9, 30, 11, 30, 31 ), 1, 0 ), 12 ) + 1, IF( DAY( ACF_Babson_Collaborative_Acceptance_Date__c) &gt; CASE( MOD( MONTH( ACF_Babson_Collaborative_Acceptance_Date__c) + 12 - 1, 12 ) + 1, 2, 28, 4, 30, 6, 30, 9, 30, 11, 30, 31 ), 1, DAY( ACF_Babson_Collaborative_Acceptance_Date__c) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Babson Collaborative Renewal Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>ACF_Benefits_Fair__c</fullName>
        <label>Benefits Fair</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>ACF_Business_Unit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Experiential Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic Partnerships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Babson Collaborative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goldman Sachs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise Programs</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>ACF_Content__c</fullName>
        <label>Content</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Franchising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Growth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Innovation</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields><fields>
        <fullName>ACF_Currency__c</fullName>
        <label>Currency</label>
        <picklist>
            <picklistValues>
                <fullName>CNY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>ACF_Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Department</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>University Department</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Academic Department</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Do_Not_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, this business should not be contacted.</inlineHelpText>
        <label>Do Not Call</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_Do_Not_Contact_image__c</fullName>
        <description>Image displayed when Do Not Contact is TRUE</description>
        <formula>IF (ACF_Do_Not_Call__c = True, 
    IMAGE("servlet/servlet.FileDownload?file=01536000002vjrx","Do Not Contact",45,45),
    "")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>.</label>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_Migrated_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Migrated Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Migrated_Modified_Date__c</fullName>
        <label>Migrated Modified Date</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>ACF_Num_Employee_Size__c</fullName>
        <formula>IF ( NumberOfEmployees &gt;= 501, "High", 
IF (NumberOfEmployees &gt;= 51, "Medium", 
IF (NumberOfEmployees &gt;= 0, "Low", 
"No Score")))</formula>
        <inlineHelpText>Low: 0 - 50
Med: 51 - 500
High: 501+</inlineHelpText>
        <label>Num Employee Size</label>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_Num_Students__c</fullName>
        <inlineHelpText>Number of Students (HE institution)</inlineHelpText>
        <label>Num Students</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>ACF_OrgID_18_chars__c</fullName>
        <description>Creates a case-safe ID which can be exported, referenced in Excel, then used to insert/upsert records in Salesforce.</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OrgID (18 chars)</label>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_Pivotal_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Historical Pivotal ID</inlineHelpText>
        <label>Pivotal ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>ACF_Program_Code__c</fullName>
        <label>Program Code</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_Program_Type__c</fullName>
        <label>Program Type</label>
        <picklist>
            <picklistValues>
                <fullName>Open Enrollment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Experiential Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic Partnerships</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>ACF_Questionable_Employer__c</fullName>
        <label>Questionable Employer</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>ACF_Referred_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Person who referred this account to Babson</inlineHelpText>
        <label>Referred By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Referred By)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Referring_Page__c</fullName>
        <inlineHelpText>Used to match the URL to the URL in Form Assembly; determines to program based on referring page.</inlineHelpText>
        <label>Referring Page</label>
        <type>Url</type>
    </fields><fields>
        <fullName>ACF_Revenue_Size__c</fullName>
        <formula>IF (AnnualRevenue &gt;= 251000000, "High",
IF (AnnualRevenue &gt;= 11000000, "Medium",
IF (AnnualRevenue &gt;= 0, "Low",
"No Score")))</formula>
        <inlineHelpText>Low: $0 - 10 Mil
Med: $11-250 Mil 
Hi: $251+ Mil</inlineHelpText>
        <label>Revenue Size</label>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_Social_Impact__c</fullName>
        <inlineHelpText>Describes employer culture as identifying / not identifying with Social Impact.</inlineHelpText>
        <label>Social Impact</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>ACF_Source_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Sourced Program</relationshipLabel>
        <relationshipName>Sourced_Program</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Sponsor_International_Students__c</fullName>
        <label>Sponsor International Students</label>
        <picklist>
            <picklistValues>
                <fullName>Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Division Dependent</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>ACF_Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Company which is sponsoring this program</inlineHelpText>
        <label>Sponsor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Business Organization</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Programs Sponsored</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Startup__c</fullName>
        <inlineHelpText>is this company a start-up?</inlineHelpText>
        <label>Startup?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>ACF_Stock_Symbol__c</fullName>
        <label>Stock Symbol</label>
        <length>10</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_Strategic_Alliance_Enrollment_Date__c</fullName>
        <description>updated when flag is set to true</description>
        <label>Strategic Alliance Enrollment Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>ACF_Strategic_Alliance_Member__c</fullName>
        <label>Strategic Alliance Member?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospective</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>ACF_Strategic_Alliance_Renewal_Date__c</fullName>
        <formula>DATE( YEAR(  ACF_Strategic_Alliance_Enrollment_Date__c ) + FLOOR( ( MONTH ( ACF_Strategic_Alliance_Enrollment_Date__c) + 10 - 1 ) / 12 ), MOD( MONTH( ACF_Strategic_Alliance_Enrollment_Date__c) + 10 - 1 + IF( DAY ( ACF_Strategic_Alliance_Enrollment_Date__c) &gt; CASE( MOD( MONTH( ACF_Strategic_Alliance_Enrollment_Date__c) + 10 - 1, 12 ) + 1, 2, 28, 4, 30, 6, 30, 9, 30, 11, 30, 31 ), 1, 0 ), 12 ) + 1, IF( DAY( ACF_Strategic_Alliance_Enrollment_Date__c) &gt; CASE( MOD( MONTH( ACF_Strategic_Alliance_Enrollment_Date__c) + 10 - 1, 12 ) + 1, 2, 28, 4, 30, 6, 30, 9, 30, 11, 30, 31 ), 1, DAY( ACF_Strategic_Alliance_Enrollment_Date__c) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Strategic Alliance Renewal Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>ACF_Symplicity_ID__c</fullName>
        <externalId>true</externalId>
        <label>Symplicity ID</label>
        <length>32</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_Tax_Identification__c</fullName>
        <label>Tax Identification #</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_Training__c</fullName>
        <inlineHelpText>Types of employee training offered</inlineHelpText>
        <label>Training</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Affiliation__c</fullName>
        <label>Affiliation</label>
        <picklist>
            <picklistValues>
                <fullName>Dummy value 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dummy value 2</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Affinities__c</fullName>
        <label>Affinities</label>
        <picklist>
            <picklistValues>
                <fullName>Dummy value 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dummy value 2</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Alumni_Discount__c</fullName>
        <label>Alumni Discount</label>
        <picklist>
            <picklistValues>
                <fullName>yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>no</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Alumni_Name_and_Affiliation__c</fullName>
        <label>Alumni Name and Affiliation</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Archive_date__c</fullName>
        <label>Archive date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>BMCServiceDesk__Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>BMCServiceDesk__Business_Hour__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Support Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>BMCServiceDesk__CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>BMCServiceDesk__FKSelfService3_Theme__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will be used to store branding theme set by admin for Self Service 3.0</description>
        <label>Self Service 3.0 Theme</label>
        <referenceTo>BMCServiceDesk__SelfService_Theme__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>AccountsThemeSS3</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>BMCServiceDesk__FKSelfService_Theme__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will be used to store branding theme set by admin for Self Service 2.0</description>
        <label>SelfService Theme</label>
        <referenceTo>BMCServiceDesk__SelfService_Theme__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>BMCServiceDesk__FKUrgency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FKUrgency</label>
        <referenceTo>BMCServiceDesk__Urgency__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>BMCServiceDesk__NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>BMCServiceDesk__Remedyforce_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remedyforce Account</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>BMCServiceDesk__SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>BMCServiceDesk__SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields><fields>
        <fullName>BMCServiceDesk__SLA__c</fullName>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>BMCServiceDesk__ServiceProvider__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ServiceProvider</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>BMCServiceDesk__UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>BMCServiceDesk__Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vendor</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>BMCServiceDesk__costCenter__c</fullName>
        <label>Cost Center</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>BMCServiceDesk__inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Business_Details__c</fullName>
        <label>Business Details</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Business_Summary__c</fullName>
        <label>Business Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>CoreId__c</fullName>
        <externalId>true</externalId>
        <label>CoreId</label>
        <length>12</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>Date_of_publication__c</fullName>
        <label>Date of Publication</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Default_content__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default content</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Discount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discount</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields><fields>
        <fullName>Industry_Classification__c</fullName>
        <label>Industry Classification</label>
        <picklist>
            <picklistValues>
                <fullName>Dummy Value 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dummy Value 2</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Industry_Personalization__c</fullName>
        <label>Industry Personalization</label>
        <picklist>
            <picklistValues>
                <fullName>Dummy value 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dummy value 2</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Interests__c</fullName>
        <label>Interests</label>
        <picklist>
            <picklistValues>
                <fullName>Dummy value 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dummy value 2</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Legacy_Lynx_Id_C__c</fullName>
        <description>Using for Lynx key store</description>
        <externalId>true</externalId>
        <label>Legacy_Lynx_Id__C</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>Location_Custom__c</fullName>
        <label>Location Custom</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>ALL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South &amp; Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US – ALL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US – East Coast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US - North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US – South/Southwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US – West Coast</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Other_School_Name__c</fullName>
        <label>Other School Name</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields><fields>
        <fullName>Public_BillingCity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public BillingCity</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_BillingCountry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public BillingCountry</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_BillingPostalCode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public BillingPostalCode</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_BillingState__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public BillingState</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_BillingStreet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public BillingStreet</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Industry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Industry</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Name</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Phone</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Dummy value 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dummy value 2</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>School_ID__c</fullName>
        <label>School ID</label>
        <picklist>
            <picklistValues>
                <fullName>institutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1910</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2081</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1818</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2028</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2254</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2071</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>80</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Trump_content__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trump content</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields><fields>
        <fullName>geopointe__Geocode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Reference to the Geocode object holding all of mapping information for the record.</inlineHelpText>
        <label>Geocode</label>
        <referenceTo>geopointe__Geocode__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>hed__Current_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The current Address that the Account's billing fields are filled with.</description>
        <inlineHelpText>The current Address that the Account's billing fields are filled with.</inlineHelpText>
        <label>Current Address</label>
        <referenceTo>hed__Address__c</referenceTo>
        <relationshipLabel>Accounts (Current Address)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>hed__Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>_SYSTEM: One2OneContact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account</relationshipLabel>
        <relationshipName>Organizations</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>sandbox_externalID__c</fullName>
        <externalId>true</externalId>
        <label>sandbox_externalID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableFeeds>true</enableFeeds><enableHistory>true</enableHistory><externalSharingModel>ReadWrite</externalSharingModel><recordTypeTrackFeedHistory>false</recordTypeTrackFeedHistory><recordTypeTrackHistory>true</recordTypeTrackHistory><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>Academic_Programs</fullName>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACF_Active_Program__c</columns>
        <columns>ACF_Program_Type__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACF_Referring_Page__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Academic_Program</value>
        </filters>
        <label>Academic Programs</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>ACCOUNT.OWNERSHIP</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>All_Accounts_nonBabson</fullName>
        <booleanFilter>1 and 2</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.OWNERSHIP</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>notContain</operation>
            <value>Babson</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Account.Organization</value>
        </filters>
        <label>All Accounts_nonBabson</label>
        <language>en_US</language>
    </listViews>    </recordTypes></CustomObject>